@@ -1,5 +1,14 @@
 2015-06-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	PR2456: Installation path for hotspot_gc.stp is
+	wrong, due to changed j2sdk-image location
+	* Makefile.am:
+	(icedtea): Fix path to hotspot_gc.stp.
+	(icedtea-debug): Likewise.
+	* NEWS: Updated.
+
+2015-06-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	PR2454: install-data-local needs to check that
 	classes.jsa actually exists
 	* Makefile.am:
